--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 </head>
 <body>
     <main>
-     
+        <div class="bottom-link">
+            <h1>SORRY</h1>
+            <P>PAGE NOT FOUND</P>
+        </div>
+        <div class="left-column">
+            <img src="./pingviniukas.jpg" alt="Penguin">
+        </div>
+       
     </main>
 </body>
 </html>
