--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 </head>
 <body>
     <main>
-        <div class="bottom-link">
+        <div class="top-link">
             <h1>SORRY</h1>
             <P>PAGE NOT FOUND</P>
         </div>
         <div class="left-column">
             <img src="./pingviniukas.jpg" alt="Penguin">
         </div>
+        <nav class="bottom-link">
+            <a href="#">Go to home</a>
+            <a href="#">Read instruction</a>
+            <a href="#">Play games</a>
+        </nav>
        
     </main>
 </body>
